--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -9,5 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         class="com.google.android.gms.maps.MapFragment" />
-
+    <Button
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:text="Show Meh"
+        android:onClick="showMe"/>
+    <WebView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/secretwv"></WebView>
 </RelativeLayout> 
